kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service-2
  labels:
    app: kafka2
    dns: route53
  #annotations:
      #domainName: "kafka.deploybytes.com"
spec:
  ports:
  - port: 9092
    name: kafka-port
    targetPort: 9092
    protocol: TCP
  selector:
    app: kafka2
  type: LoadBalancer
