kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: zook2
  labels:
    app: kafka2
spec:
  ports:
  - port: 2181
    name: zookeeper-port
    targetPort: 2181
    protocol: TCP
  selector:
    app: kafka2
