nifi.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi
  labels:
    app: nifi
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nifi.deploybytes.com.
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: access
    targetPort: access
    protocol: TCP
  - port: 8081
    name: http
    targetPort: http
    protocol: TCP
  selector:
    app: nifi
