powerdash_kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdashtest
  labels:
    app: powerdashtest
spec:
  ports:
  - port: 2600
    name: kafkaconsumer-port
    targetPort: 2600
    protocol: TCP
  selector:
    app: powerdashtest
