powerdash_producer.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdashcalltest
  labels:
    app: powerdashcalltest
spec:
  ports:
  - port: 2700
    name: powerdash
    targetPort: 2700
    protocol: TCP
  selector:
    app: powerdashcalltest
