powerdash_test.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdashcalltest
  labels:
    app: powerdashcalltest
spec:
  ports:
  - port: 2800
    name: powerdashcalltest
    targetPort: 2700
    protocol: TCP
  selector:
    app: powerdashcalltest
