robomongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: robomongo
  labels:
    app: robomongo
spec:
  type: LoadBalancer
  ports:
  - port: 3700
    name: robomongo
    targetPort: 3700
    protocol: TCP
  selector:
    app: robomongo
