text_analytics.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdash
  labels:
    app: powerdash
spec:
  ports:
  - port: 5000
    name: kafkaconsumer-port
    targetPort: 5000
    protocol: TCP
  selector:
    app: powerdash
